code trading examples

--- a/MichaelHarris_RejectionPattern_git.ipynb
+++ b/MichaelHarris_RejectionPattern_git.ipynb
@@ -22,7 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example of testing Michael Harris rejection pattern strategy on multiple assets"
+    "Example of testing Michael Harris rejection pattern strategy on multiple assets\n",
+    "\n",
+    "Original strategy on Code Trading YT channel: https://www.youtube.com/watch?v=tOH6Bd_jvfA"
    ]
   },
   {
@@ -3714,36 +3716,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a05c684bcaca49dcb461cfefe6198354",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e05ea9d7f34243368b1e7eb896fb8462",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "heatmaps = []\n",
@@ -3918,7 +3891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3963,7 +3936,7 @@
     }
    ],
    "source": [
-    "results[1] #SPY"
+    "results[1] #SPY stats"
    ]
   }
  ],
