--- a/RaynerTeo_stocks_BB_git.ipynb
+++ b/RaynerTeo_stocks_BB_git.ipynb
@@ -33,14 +33,14 @@
    "source": [
     "- Using daily timeframe and 2 EMAs for trend detection \n",
     "- Customize slow and fast EMAs length\n",
-    "- Customize Bollinger Bands length and STD\n",
+    "- Customize Bollinger Bands length and STD parameters\n",
     "- Low price of candle closing below lower BB - put buy order at perc% distance from the current closing price\n",
-    "- Increasing the perc% will decrease the number of trades, increasing slectivness\n",
-    "- If order is transofrmed into open order, close trade using the RSI as exit signal or after a certain number of days\n",
+    "- Increasing the perc% will decrease the number of trades, increasing selectivness\n",
     "- A selective strategy like this will not have higer number of trades in the daily timeframe\n",
+    "- If order is transofrmed into open order, close trade using the RSI as exit signal or after a certain number of days\n",
     "- If a second signal is detected, the first order is closed and only the second is kept\n",
     "- Only one order is allowed at the same time\n",
-    "- Optimize parameters for keeping losses low during drawdown periods like shown in the equity curve\n",
+    "- Optimize parameters for keeping losses low during drawdown periods like the ones shown in the equity curve\n",
     "\n",
     "Original strategy on Code Trading YT channel: https://www.youtube.com/watch?v=f6Nh4guZPRs"
    ]
